--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
       <h1>Calculator</h1>
       <form id="add">
         <div class="form-group">
-          <label for="Enter first number:"></label>
+          <label for="firstNumber">Enter first number:</label>
           <input type="text" id="add1" class="form-control">
         </div>
         <div class="form-group">
-          <label for="Enter second number:"></label>
+          <label for="secondNumber">Enter second number:</label>
           <input type="text" id="add2" class="form-control">
         </div>
         <button type="submit" class="btn">Add!</button>
       </form>
-
+      <div id="output">
+        <p>
+          Result: <span id="result"></span>
+        </p>
+      </div>
     </div>
 
 
