--- a/index.html
+++ b/index.html
@@ -16,21 +16,89 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
-        <div class="form-group">
-          <label for="firstNumber">Enter first number:</label>
-          <input type="text" id="add1" class="form-control">
+      <div class="row">
+        <!-- Add -->
+        <div class="col-md-6">
+          <form id="add">
+            <div class="form-group">
+              <label for="firstNumber">Enter first number:</label>
+              <input type="text" id="add1" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="secondNumber">Enter second number:</label>
+              <input type="text" id="add2" class="form-control">
+            </div>
+            <button type="submit" class="btn">Add!</button>
+            <div class="output">
+              <p>
+                Result: <span id="resultAdd"></span>
+              </p>
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="secondNumber">Enter second number:</label>
-          <input type="text" id="add2" class="form-control">
+        <!-- End Add -->
+        <!-- Subtract -->
+        <div class="col-md-6">
+          <form id="subtract">
+            <div class="form-group">
+              <label for="firstNumber">Enter first number:</label>
+              <input type="text" class="form-control" id="subtract1">
+            </div>
+            <div class="form-group">
+              <label for="secondNumber">Enter second number:</label>
+              <input type="text" class="form-control" id="subtract2">
+            </div>
+            <button type="submit" class="btn" name="button">Subtract!</button>
+            <div class="output">
+              <p>
+                Result: <span id="resultSubtract"></span>
+              </p>
+            </div>
+          </form>
         </div>
-        <button type="submit" class="btn">Add!</button>
-      </form>
-      <div id="output">
-        <p>
-          Result: <span id="result"></span>
-        </p>
+        <!-- End Subtract -->
+      </div>
+      <div class="row">
+        <!-- Multiply -->
+        <div class="col-md-6">
+          <form id="multiply">
+            <div class="form-group">
+              <label for="firstNumber">Enter first number:</label>
+              <input type="text" id="multiply1" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="firstNumber">Enter first number:</label>
+              <input type="text" id="multiply2" class="form-control">
+            </div>
+            <button type="sumbit" name="button" class="btn">Multiply!</button>
+            <div class="output">
+              <p>
+                Result: <span id="resultMultiply"></span>
+              </p>
+            </div>
+          </form>
+        </div>
+        <!-- End Multiply -->
+        <div class="col-md-6">
+        <!-- Divide -->
+          <form id="divide">
+            <div class="form-group">
+              <label for="firstNumber">Enter first number:</label>
+              <input type="text" class="form-control" id="divide1">
+            </div>
+            <div class="form-group">
+              <label for="secondNumber">Enter second number:</label>
+              <input type="text" class="form-control" id="divide2">
+            </div>
+            <button class="btn" type="submit">Divide!</button>
+            <div class="output">
+              <p>
+                Result: <span id="resultDivide"></span>
+              </p>
+            </div>
+          </form>
+        </div>
+        <!-- End Divide -->
       </div>
     </div>
 
