--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <div class="container">
       <h1>Calculator</h1>
       <form id="calculator">
-        
+        <div class="form-group">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
+        </div>
       </form>
     </div>
 
