--- a/index.html
+++ b/index.html
@@ -25,7 +25,35 @@
           <label for="input2">2nd number:</label>
           <input id="input2" class="form-control" type="text">
         </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            add
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            multiply
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            divide
+          </label>
+        </div>
+        <button class="btn btn-success" type="submit" name="button">Go!</button>
       </form>
+      <div id="output">
+
+      </div>
     </div>
 
 
